MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/Offers_Collections__c.object-meta.xml
<CustomObject>
    <label>Offers Collections</label>
    <nameField>
        <displayFormat>AOC-{0000}</displayFormat>
        <label>Offers Collections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>