MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/ADM_Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADM_Discounted_Amount__c</fullName>
    <formula>Sales_Order__r.Discount_on_ADM_fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADM Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>