MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved / Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>