MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/ApproveRejectByFRM__c.field-meta.xml
<CustomField>
    <fullName>ApproveRejectByFRM__c</fullName>
    <formula>Approved_Rejected_By__r.FirstName +&apos; &apos;+ Approved_Rejected_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApproveRejectByFRM</label>
    <type>Text</type>
</CustomField>