MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Offers Collections</relationshipLabel>
    <relationshipName>Offers_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>