MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers Collections</relationshipLabel>
    <relationshipName>Offers_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>