MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/DontAllowToCreateCreditNote__c.field-meta.xml
<CustomField>
    <fullName>DontAllowToCreateCreditNote__c</fullName>
    <formula>AND( (Invoice__r.AppliedAmount__c + ADM_Discounted_Amount__c) &gt;  Invoice_Amount__c,ISPICKVAL(Approval_Status__c,&apos;Not Submitted&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DontAllowToCreateCreditNote</label>
    <type>Checkbox</type>
</CustomField>