MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Offers Collections</relationshipLabel>
    <relationshipName>Offers_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>