MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Offer_Lines__c.field-meta.xml
<CustomField>
    <fullName>Offer_Lines__c</fullName>
    <label>Offer Lines</label>
    <referenceTo>OfferLines__c</referenceTo>
    <relationshipLabel>Offers Collections</relationshipLabel>
    <relationshipName>Offers_Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>