MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <formula>Offer_Lines__r.OfferName__r.OfferName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Name</label>
    <type>Text</type>
</CustomField>