MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Offer_On__c.field-meta.xml
<CustomField>
    <fullName>Offer_On__c</fullName>
    <formula>TEXT(Offer_Lines__r.OfferOn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer On</label>
    <type>Text</type>
</CustomField>