MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Offers Collections</relationshipLabel>
    <relationshipName>Offers_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>