MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/fields/Waiver_Memo_No__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Memo_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiver Memo No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>