MODON MRE BPDEV/force-app/main/default/objects/Offers_Collections__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Approval_Status__c) &amp;&amp;
TEXT(Approval_Status__c) = &quot;Rejected&quot; &amp;&amp;
ISBLANK(Rejection_Reason__c)</errorConditionFormula>
    <errorMessage>Rejection Reason is Required if Offer is Rejected!</errorMessage>
</ValidationRule>